# purdue-corec-occupancy-stats

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: update_data.yml
