[tool.poetry]
name = "purdue-corec-occupancy-stats"
version = "0.1.0"
description = ""
authors = ["advait-panicker <advait.panicker@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
